feature(general): Add streaming component and service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
-    <app-card ngClass="card"></app-card>
+    <app-streaming ngClass="card"></app-streaming>
     <app-card ngClass="card"></app-card>
     <app-card ngClass="card"></app-card>
     <app-card ngClass="card"></app-card>
