--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
 
   <div class="card-container">
     <app-streaming ngClass="card"></app-streaming>
-    <app-card ngClass="card"></app-card>
+    <app-browser ngClass="card"></app-browser>
     <app-card ngClass="card"></app-card>
     <app-card ngClass="card"></app-card>
   </div>
