feat(column): Add column component and service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
     <app-streaming ngClass="card"></app-streaming>
     <app-browser ngClass="card"></app-browser>
     <app-genre ngClass="card"></app-genre>
-    <app-card ngClass="card"></app-card>
+    <app-column-option ngClass="card"></app-column-option>
   </div>
 
   <!-- Links -->
