feat(gen) add side bar

--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,6 +1,7 @@
-<div class="result-component" *ngIf="streaming">
+<div class="well well-lg result-component" *ngIf="streaming">
     <p>Excelente!</p>
     <br/>
+
     <p>Now go to <strong>{{ streaming }}</strong>, select <strong>{{ browser }}</strong> go to <strong>{{ genre }}</strong> and select option <strong>{{ columnOption }}</strong></p>
 </div>
 
